--- a/dubbotest-user-consumer/pom.xml
+++ b/dubbotest-user-consumer/pom.xml
@@ -67,7 +67,26 @@
             <artifactId>commons-codec</artifactId>
             <version>1.12</version>
         </dependency>
-
+        <!--<dependency>
+            <groupId>net.sourceforge.tess4j</groupId>
+            <artifactId>tess4j</artifactId>
+            <version>4.3.1</version>
+            <exclusions>
+                <exclusion>
+                      <groupId>org.slf4j</groupId>
+                      <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                      <groupId>org.slf4j</groupId>
+                      <artifactId>log4j-over-slf4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>-->
+       <!-- <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>4.1.0</version>
+        </dependency>-->
         <!--<dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
