--- a/dubbotest-user-consumer/pom.xml
+++ b/dubbotest-user-consumer/pom.xml
@@ -93,6 +93,22 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>-->
+        <dependency>
+            <groupId>com.ksyun</groupId>
+            <artifactId>ks3-kss-java-sdk</artifactId>
+            <version>0.6.2</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-logging</artifactId>
+                    <groupId>commons-logging</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org</groupId>
+            <artifactId>jaudiotagger</artifactId>
+            <version>2.0.3</version>
+        </dependency>
     </dependencies>
 
     <build>
